[package]
name = "bevy_index"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "c7b9ad50970edf7587f97dc574f19e2978784822" }
multimap = "^0.8.2"
rand = "^0.7.3"
