[package]
name = "bevy_index"
version = "0.1.0"
authors = ["Alice Cecile <alice.i.cecile@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "f71dc5daebb82fd6a5bfbd0e8f927238232bc4e2" }
multimap = "^0.8.2"
rand = "^0.7.3"
